crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__declarations__annotations_and_modifiers.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.declarations

@Target(AnnotationTarget.CLASS, AnnotationTarget.FUNCTION)
annotation class Generated(val by: String)

@Generated("fixture")
sealed class Result

data class Success(val value: String) : Result()

diagnostics:
(none)
