crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__declarations__class_header_clauses.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.declarations

interface Readable

interface Writable

class Repository<T : Any>(
  private val name: String,
  private val items: MutableList<T>,
)
  : Readable, Writable

diagnostics:
(none)
