crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__declarations__delegation.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.declarations

interface Store {
  fun save(value: String)
}

class MemoryStore
  : Store {
  override fun save(value: String) {}
}

class AuditedStore(private val delegate: Store) : Store by delegate

diagnostics:
(none)
