crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__declarations__enum_entries.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum class Single {
  Entry
}

enum class Annotated {
  @Deprecated("legacy")
  Entry
}

diagnostics:
(none)
