crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__declarations__enum_entry_semicolon_comment_idempotency.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum class CommentedEntrySeparator {
  FIRST,
  SECOND /* before members */;

  fun member() {}
}

enum class LineCommentedEntrySeparator {
  FIRST,
  SECOND // before members
  ;

  fun member() {}
}

enum class TrailingLineCommentedEntrySeparator {
  FIRST,
  SECOND // before members
  ;

  fun member() {}
}

enum class TrailingBlockCommentedEntrySeparator {
  FIRST,
  SECOND /* before members */;

  fun member() {}
}

enum class IgnoredEntryBeforeSeparator {
  FIRST,
  // @formatter:off
  SECOND
  // @formatter:on
  ;
  fun member() {}
}

diagnostics:
(none)
