crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__declarations__explicit_backing_fields.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.declarations

class Location {
  val city: String
    field = "Paris"

  var country: String
    field = "FR"
    get() = field.uppercase()
    set(value) {
      field = value.trim()
    }
}

diagnostics:
(none)
