crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__declarations__formatter_ignore_comment_before_on.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class FormatterIgnoreCommentBeforeOn {
  // @formatter:off
  fun   raw( ) { }
  // owned by the next member
  // @formatter:on
  fun formatted() {}
}

class FormatterIgnoreCommentBeforeOnAtBoundary {
  // @formatter:off
  fun   raw( ) { }
  // owned by the close brace
  // @formatter:on
}

class FormatterIgnoreRepeatedOffBeforeOn {
  // @formatter:off
  fun   raw( ) { }
  // @formatter:off
  // @formatter:on
  fun formatted() {}
}

diagnostics:
(none)
