crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__declarations__objects_and_companions.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.declarations

object Registry {
  private val values = mutableMapOf<String, String>()

  fun put(key: String, value: String) {
    values[key] = value
  }
}

class WithCompanion {
  companion object {
    const val KIND = "fixture"
  }
}

diagnostics:
(none)
