crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__declarations__primary_constructor_comments.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.declarations

class Account(
  // Stable identifier from storage.
  val id: String,
  /* Displayed to users. */ var label: String,
)

diagnostics:
(none)
